gospel/tests/negative/t3.mli

(*@ function f (x:int): bool = x = 2 *)

(* ERROR if coercion is not used. Type mismatch int and integer *)
